apps/backstage/base/traefik-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-to-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: allow-local-only
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.1.0/24
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backstage-http-redirect
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`backstage.brandt.widdershoven.nl`)
      kind: Rule
      services:
        - kind: TraefikService
          name: noop@internal
      middlewares:
        - name: allow-local-only
        - name: http-to-https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backstage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`backstage.brandt.widdershoven.nl`)
      priority: 10
      services:
        - name: backstage
          scheme: http
          port: 80
      middlewares:
        - name: allow-local-only
        - name: http-to-https-redirect
  tls:
    secretName: backstage-tls
